--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.2.3",
+    "@angular-devkit/core": "^21.0.2",
     "@angular/cli": "~17.2.3",
     "@angular/compiler-cli": "^17.2.4",
     "@types/jasmine": "~4.3.0",
